--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.idea/
 
 ### Kotlin ###
 .kotlin
@@ -28,5 +29,3 @@ bin/
 ### VS Code ###
 .vscode/
 
-### Mac OS ###
-.DS_Store
